force-app/main/default/objects/bpats__ATS_Template_Stage__c/bpats__ATS_Template_Stage__c.object-meta.xml
<CustomObject>
    <label>ATS Template Stage</label>
    <nameField>
        <label>ATS Template Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATS Template Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>