force-app/main/default/objects/bpats__ATS_Template_Stage__c/fields/bpats__ATS_Template__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Template__c</fullName>
    <label>ATS Template</label>
    <referenceTo>bpats__ATS_Template__c</referenceTo>
    <relationshipLabel>ATS Template Stages</relationshipLabel>
    <relationshipName>ATS_Template_Stages1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>