force-app/main/default/objects/bpats__ATS_Template_Stage__c/fields/bpats__Block_Multiple_Candidates__c.field-meta.xml
<CustomField>
    <fullName>bpats__Block_Multiple_Candidates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Multiple Candidates</label>
    <type>Checkbox</type>
</CustomField>