force-app/main/default/objects/bpats__ATS_Template_Stage__c/fields/bpats__Interview_Stage__c.field-meta.xml
<CustomField>
    <fullName>bpats__Interview_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interview Stage</label>
    <type>Checkbox</type>
</CustomField>