force-app/main/default/objects/bpats__ATS_Template_Stage__c/fields/bpats__Stage_Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Stage_Type__c</fullName>
    <label>Stage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>bpats__Stage_Type</valueSetName>
    </valueSet>
</CustomField>