force-app/main/default/objects/bpats__ATS_Template_Stage__c/fields/bpats__Template_Stage_External_Id__c.field-meta.xml
<CustomField>
    <fullName>bpats__Template_Stage_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Template Stage External Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>